--- a/pages/kyc.html
+++ b/pages/kyc.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KYC Verification - SJA Foundation</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css" rel="stylesheet">
     <link href="../assets/css/style.css" rel="stylesheet">
 </head>
 <body class="bg-light">
@@ -23,6 +24,12 @@
                         <a class="nav-link" href="client-dashboard.html">Dashboard</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="investments.html">Investments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="wallet.html">Wallet</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link active" href="kyc.html">KYC</a>
                     </li>
                 </ul>
@@ -37,110 +44,144 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container my-5">
-        <div class="row">
-            <!-- KYC Status Card -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">KYC Status</h5>
-                        <div class="text-center my-4">
-                            <div class="status-circle" id="kyc-status-circle">
-                                <i class="bi bi-clock-history"></i>
-                            </div>
-                            <h4 class="mt-3" id="kyc-status-text">Pending</h4>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar" id="kyc-progress" role="progressbar" style="width: 0%"></div>
+    <div class="container py-4">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h3 class="mb-0">KYC Verification</h3>
+            <span class="badge" id="kyc-status-badge">NOT SUBMITTED</span>
+        </div>
+
+        <!-- KYC Form -->
+        <div class="card">
+            <div class="card-body">
+                <form id="kyc-form" class="row g-3">
+                    <!-- Personal Information -->
+                    <div class="col-12">
+                        <h5 class="card-title">Personal Information</h5>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Full Name (as per ID)</label>
+                        <input type="text" class="form-control" id="kyc-name" required>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Date of Birth</label>
+                        <input type="date" class="form-control" id="kyc-dob" required>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Gender</label>
+                        <select class="form-select" id="kyc-gender" required>
+                            <option value="">Select Gender</option>
+                            <option value="male">Male</option>
+                            <option value="female">Female</option>
+                            <option value="other">Other</option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Nationality</label>
+                        <input type="text" class="form-control" id="kyc-nationality" value="Indian" required>
+                    </div>
+
+                    <!-- ID Proof -->
+                    <div class="col-12 mt-4">
+                        <h5 class="card-title">ID Proof</h5>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">ID Proof Type</label>
+                        <select class="form-select" id="id-proof-type" required>
+                            <option value="">Select ID Proof</option>
+                            <option value="aadhar">Aadhar Card</option>
+                            <option value="pan">PAN Card</option>
+                            <option value="passport">Passport</option>
+                            <option value="voter">Voter ID</option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">ID Number</label>
+                        <input type="text" class="form-control" id="id-number" required>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">ID Proof Document (Front)</label>
+                        <input type="file" class="form-control" id="id-proof-front" accept="image/*,.pdf" required>
+                        <img id="id-proof-front-preview" class="mt-2 d-none" style="max-width: 200px;">
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">ID Proof Document (Back)</label>
+                        <input type="file" class="form-control" id="id-proof-back" accept="image/*,.pdf" required>
+                        <img id="id-proof-back-preview" class="mt-2 d-none" style="max-width: 200px;">
+                    </div>
+
+                    <!-- Address Proof -->
+                    <div class="col-12 mt-4">
+                        <h5 class="card-title">Address Proof</h5>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Address Proof Type</label>
+                        <select class="form-select" id="address-proof-type" required>
+                            <option value="">Select Address Proof</option>
+                            <option value="aadhar">Aadhar Card</option>
+                            <option value="utility">Utility Bill</option>
+                            <option value="bank">Bank Statement</option>
+                            <option value="passport">Passport</option>
+                        </select>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">Address Proof Document</label>
+                        <input type="file" class="form-control" id="address-proof-file" accept="image/*,.pdf" required>
+                        <img id="address-proof-preview" class="mt-2 d-none" style="max-width: 200px;">
+                    </div>
+
+                    <!-- Address Details -->
+                    <div class="col-12">
+                        <label class="form-label">Address Line 1</label>
+                        <input type="text" class="form-control" id="address-line1" required>
+                    </div>
+
+                    <div class="col-12">
+                        <label class="form-label">Address Line 2</label>
+                        <input type="text" class="form-control" id="address-line2">
+                    </div>
+
+                    <div class="col-md-6">
+                        <label class="form-label">City</label>
+                        <input type="text" class="form-control" id="city" required>
+                    </div>
+
+                    <div class="col-md-4">
+                        <label class="form-label">State</label>
+                        <input type="text" class="form-control" id="state" required>
+                    </div>
+
+                    <div class="col-md-2">
+                        <label class="form-label">Pincode</label>
+                        <input type="text" class="form-control" id="pincode" required>
+                    </div>
+
+                    <!-- Declaration -->
+                    <div class="col-12 mt-4">
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" id="declaration" required>
+                            <label class="form-check-label" for="declaration">
+                                I hereby declare that all the information provided above is true and correct to the best of my knowledge.
+                                I understand that providing false information may result in rejection of my application and legal consequences.
+                            </label>
                         </div>
                     </div>
-                </div>
-            </div>
 
-            <!-- KYC Form -->
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">KYC Document Upload</h5>
-                        <form id="kyc-form" class="mt-4">
-                            <!-- Aadhaar Card -->
-                            <div class="mb-4">
-                                <label class="form-label">Aadhaar Card</label>
-                                <div class="input-group">
-                                    <input type="file" class="form-control" id="aadhaar" accept="image/*,.pdf">
-                                    <button class="btn btn-outline-primary" type="button" onclick="uploadDocument('aadhaar')">
-                                        Upload
-                                    </button>
-                                </div>
-                                <div class="preview mt-2" id="aadhaar-preview"></div>
-                            </div>
-
-                            <!-- PAN Card -->
-                            <div class="mb-4">
-                                <label class="form-label">PAN Card</label>
-                                <div class="input-group">
-                                    <input type="file" class="form-control" id="pan" accept="image/*,.pdf">
-                                    <button class="btn btn-outline-primary" type="button" onclick="uploadDocument('pan')">
-                                        Upload
-                                    </button>
-                                </div>
-                                <div class="preview mt-2" id="pan-preview"></div>
-                            </div>
-
-                            <!-- Passport Photo -->
-                            <div class="mb-4">
-                                <label class="form-label">Passport Size Photo</label>
-                                <div class="input-group">
-                                    <input type="file" class="form-control" id="photo" accept="image/*">
-                                    <button class="btn btn-outline-primary" type="button" onclick="uploadDocument('photo')">
-                                        Upload
-                                    </button>
-                                </div>
-                                <div class="preview mt-2" id="photo-preview"></div>
-                            </div>
-
-                            <!-- Bank Passbook -->
-                            <div class="mb-4">
-                                <label class="form-label">Bank Passbook/Statement</label>
-                                <div class="input-group">
-                                    <input type="file" class="form-control" id="passbook" accept="image/*,.pdf">
-                                    <button class="btn btn-outline-primary" type="button" onclick="uploadDocument('passbook')">
-                                        Upload
-                                    </button>
-                                </div>
-                                <div class="preview mt-2" id="passbook-preview"></div>
-                            </div>
-
-                            <!-- Address Proof -->
-                            <div class="mb-4">
-                                <label class="form-label">Address Proof</label>
-                                <div class="input-group">
-                                    <input type="file" class="form-control" id="address" accept="image/*,.pdf">
-                                    <button class="btn btn-outline-primary" type="button" onclick="uploadDocument('address')">
-                                        Upload
-                                    </button>
-                                </div>
-                                <div class="preview mt-2" id="address-preview"></div>
-                            </div>
-
-                            <!-- Signature -->
-                            <div class="mb-4">
-                                <label class="form-label">Signature</label>
-                                <div class="input-group">
-                                    <input type="file" class="form-control" id="signature" accept="image/*">
-                                    <button class="btn btn-outline-primary" type="button" onclick="uploadDocument('signature')">
-                                        Upload
-                                    </button>
-                                </div>
-                                <div class="preview mt-2" id="signature-preview"></div>
-                            </div>
-
-                            <button type="submit" class="btn btn-primary" id="submit-kyc">
-                                Submit KYC Documents
-                            </button>
-                        </form>
+                    <div class="col-12 mt-4">
+                        <button type="submit" class="btn btn-primary" id="submit-kyc">
+                            Submit KYC Documents
+                        </button>
                     </div>
-                </div>
+                </form>
             </div>
         </div>
     </div>
@@ -150,144 +191,6 @@
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="../assets/js/config.js"></script>
     <script src="../assets/js/theme.js"></script>
-    <script>
-        // Check authentication
-        document.addEventListener('DOMContentLoaded', async function() {
-            const { data: { user }, error } = await supabaseClient.auth.getUser();
-            if (error || !user) {
-                window.location.href = '/';
-            }
-            loadKYCStatus();
-        });
-
-        // Load KYC Status
-        async function loadKYCStatus() {
-            const { data: { user } } = await supabaseClient.auth.getUser();
-            const { data: kyc, error } = await supabaseClient
-                .from('kyc_docs')
-                .select('*')
-                .eq('user_id', user.id)
-                .single();
-
-            if (kyc) {
-                updateKYCStatus(kyc.status);
-                updateDocumentPreviews(kyc);
-            }
-        }
-
-        // Update KYC Status UI
-        function updateKYCStatus(status) {
-            const statusCircle = document.getElementById('kyc-status-circle');
-            const statusText = document.getElementById('kyc-status-text');
-            const progressBar = document.getElementById('kyc-progress');
-
-            statusText.textContent = status.charAt(0).toUpperCase() + status.slice(1);
-
-            switch(status) {
-                case 'pending':
-                    statusCircle.innerHTML = '<i class="bi bi-clock-history"></i>';
-                    progressBar.style.width = '33%';
-                    progressBar.className = 'progress-bar bg-warning';
-                    break;
-                case 'approved':
-                    statusCircle.innerHTML = '<i class="bi bi-check-lg"></i>';
-                    progressBar.style.width = '100%';
-                    progressBar.className = 'progress-bar bg-success';
-                    break;
-                case 'rejected':
-                    statusCircle.innerHTML = '<i class="bi bi-x-lg"></i>';
-                    progressBar.style.width = '100%';
-                    progressBar.className = 'progress-bar bg-danger';
-                    break;
-            }
-        }
-
-        // Upload Document
-        async function uploadDocument(type) {
-            const fileInput = document.getElementById(type);
-            const file = fileInput.files[0];
-            
-            if (!file) {
-                alert('Please select a file first');
-                return;
-            }
-
-            const { data: { user } } = await supabaseClient.auth.getUser();
-            const fileName = `${user.id}/${type}_${Date.now()}${file.name.substring(file.name.lastIndexOf('.'))}`;
-
-            const { data, error } = await supabaseClient.storage
-                .from('kyc_documents')
-                .upload(fileName, file);
-
-            if (error) {
-                alert('Error uploading document: ' + error.message);
-                return;
-            }
-
-            const { publicURL } = supabaseClient.storage
-                .from('kyc_documents')
-                .getPublicUrl(fileName);
-
-            document.getElementById(`${type}-preview`).innerHTML = `
-                <div class="alert alert-success mt-2">
-                    <i class="bi bi-check-circle-fill"></i> Document uploaded successfully
-                </div>
-            `;
-
-            // Update KYC docs record
-            const { data: kyc, error: kycError } = await supabaseClient
-                .from('kyc_docs')
-                .upsert({
-                    user_id: user.id,
-                    [type]: publicURL,
-                    status: 'pending'
-                }, {
-                    onConflict: 'user_id'
-                });
-
-            if (kycError) {
-                alert('Error updating KYC record: ' + kycError.message);
-            }
-        }
-
-        // Update document previews
-        function updateDocumentPreviews(kyc) {
-            const documents = ['aadhaar', 'pan', 'photo', 'passbook', 'address', 'signature'];
-            documents.forEach(doc => {
-                if (kyc[doc]) {
-                    document.getElementById(`${doc}-preview`).innerHTML = `
-                        <div class="alert alert-success mt-2">
-                            <i class="bi bi-check-circle-fill"></i> Document uploaded
-                            <a href="${kyc[doc]}" target="_blank" class="ms-2">View</a>
-                        </div>
-                    `;
-                }
-            });
-        }
-
-        // Handle form submission
-        document.getElementById('kyc-form').addEventListener('submit', async function(e) {
-            e.preventDefault();
-            const { data: { user } } = await supabaseClient.auth.getUser();
-            
-            const { data, error } = await supabaseClient
-                .from('kyc_docs')
-                .update({ status: 'pending' })
-                .eq('user_id', user.id);
-
-            if (error) {
-                alert('Error submitting KYC: ' + error.message);
-            } else {
-                alert('KYC documents submitted successfully!');
-                loadKYCStatus();
-            }
-        });
-
-        // Logout function
-        async function logout() {
-            await supabaseClient.auth.signOut();
-            window.location.href = '/';
-        }
-    </script>
+    <script src="../assets/js/client-dashboard.js"></script>
 </body>
 </html> 
