--- a/pages/wallet.html
+++ b/pages/wallet.html
@@ -44,64 +44,53 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container my-5">
-        <div class="row">
-            <!-- Wallet Balance -->
-            <div class="col-md-4 mb-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Wallet Balance</h5>
-                        <div class="text-center my-4">
-                            <h2 class="display-4" id="wallet-balance">₹0.00</h2>
-                            <p class="text-muted">Available Balance</p>
-                        </div>
-                        <div class="d-grid gap-2">
-                            <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#depositModal">
-                                <i class="bi bi-plus-circle me-2"></i>Add Money
-                            </button>
-                            <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#withdrawModal">
-                                <i class="bi bi-arrow-down-circle me-2"></i>Withdraw
-                            </button>
-                        </div>
-                    </div>
-                </div>
+    <div class="container py-4">
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <h3 class="mb-0">Wallet</h3>
+            <div>
+                <button class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#depositModal">
+                    <i class="bi bi-plus-lg"></i> Deposit
+                </button>
+                <button class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#withdrawModal">
+                    <i class="bi bi-dash-lg"></i> Withdraw
+                </button>
+            </div>
+        </div>
 
-                <!-- Bank Details -->
-                <div class="card mt-4">
-                    <div class="card-body">
-                        <h5 class="card-title">Bank Details</h5>
-                        <div class="mt-3">
-                            <p class="mb-2"><strong>Account Name:</strong> SJA Foundation</p>
-                            <p class="mb-2"><strong>Account Number:</strong> 1234567890</p>
-                            <p class="mb-2"><strong>IFSC Code:</strong> SBIN0123456</p>
-                            <p class="mb-0"><strong>Bank:</strong> State Bank of India</p>
-                        </div>
+        <!-- Wallet Balance Card -->
+        <div class="card mb-4">
+            <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                    <div>
+                        <h6 class="text-muted mb-1">Available Balance</h6>
+                        <h2 class="mb-0" id="wallet-balance-display">₹0.00</h2>
+                        <small class="text-muted" id="wallet-last-updated"></small>
+                    </div>
+                    <div class="display-4 text-primary">
+                        <i class="bi bi-wallet2"></i>
                     </div>
                 </div>
             </div>
+        </div>
 
-            <!-- Transaction History -->
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Transaction History</h5>
-                        <div class="table-responsive mt-4">
-                            <table class="table table-hover">
-                                <thead>
-                                    <tr>
-                                        <th>Date</th>
-                                        <th>Type</th>
-                                        <th>Amount</th>
-                                        <th>Status</th>
-                                        <th>Reference</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="transactions-table">
-                                    <!-- Transactions will be loaded here -->
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
+        <!-- Recent Transactions -->
+        <div class="card">
+            <div class="card-body">
+                <h5 class="card-title">Recent Transactions</h5>
+                <div class="table-responsive">
+                    <table class="table table-hover">
+                        <thead>
+                            <tr>
+                                <th>Date</th>
+                                <th>Type</th>
+                                <th>Amount</th>
+                                <th>Status</th>
+                            </tr>
+                        </thead>
+                        <tbody id="transactions-table-body">
+                            <!-- Transactions will be loaded dynamically -->
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
@@ -109,41 +98,33 @@
 
     <!-- Deposit Modal -->
     <div class="modal fade" id="depositModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Add Money to Wallet</h5>
+                    <h5 class="modal-title">Deposit Funds</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
                     <form id="deposit-form">
                         <div class="mb-3">
                             <label class="form-label">Amount (₹)</label>
-                            <input type="number" class="form-control" id="deposit-amount" required min="100">
-                            <small class="text-muted">Minimum deposit: ₹100</small>
+                            <input type="number" class="form-control" id="deposit-amount" required>
+                            <div class="form-text">Minimum deposit: ₹1,000</div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Payment Method</label>
                             <select class="form-select" id="deposit-method" required>
                                 <option value="">Select Method</option>
-                                <option value="bank_transfer">Bank Transfer</option>
                                 <option value="upi">UPI</option>
+                                <option value="bank">Bank Transfer</option>
+                                <option value="card">Debit/Credit Card</option>
                             </select>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Transaction Reference</label>
-                            <input type="text" class="form-control" id="deposit-reference" required>
-                            <small class="text-muted">UTR number or transaction ID</small>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Payment Proof</label>
-                            <input type="file" class="form-control" id="deposit-proof" accept="image/*" required>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" onclick="submitDeposit()">Submit</button>
+                    <button type="button" class="btn btn-primary" onclick="processDeposit()">Deposit</button>
                 </div>
             </div>
         </div>
@@ -151,47 +132,42 @@
 
     <!-- Withdraw Modal -->
     <div class="modal fade" id="withdrawModal" tabindex="-1">
-        <div class="modal-dialog">
+        <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Withdraw Money</h5>
+                    <h5 class="modal-title">Withdraw Funds</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
                     <form id="withdraw-form">
                         <div class="mb-3">
                             <label class="form-label">Amount (₹)</label>
-                            <input type="number" class="form-control" id="withdraw-amount" required min="100">
-                            <small class="text-muted">Minimum withdrawal: ₹100</small>
+                            <input type="number" class="form-control" id="withdraw-amount" required>
+                            <div class="form-text">Available balance: ₹<span id="available-balance">0.00</span></div>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Withdrawal Type</label>
                             <select class="form-select" id="withdraw-type" required>
-                                <option value="regular">Regular (10% fee)</option>
-                                <option value="emergency">Emergency (13% fee)</option>
+                                <option value="">Select Type</option>
+                                <option value="regular">Regular (10% limit)</option>
+                                <option value="emergency">Emergency</option>
                             </select>
                         </div>
-                        <div class="mb-3" id="emergency-reason-container" style="display: none;">
-                            <label class="form-label">Emergency Reason</label>
+                        <div class="mb-3 d-none" id="emergency-reason-group">
+                            <label class="form-label">Reason for Emergency Withdrawal</label>
                             <textarea class="form-control" id="emergency-reason" rows="3"></textarea>
                         </div>
                         <div class="mb-3">
-                            <label class="form-label">Bank Name</label>
-                            <input type="text" class="form-control" id="bank-name" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">Account Number</label>
-                            <input type="text" class="form-control" id="account-number" required>
-                        </div>
-                        <div class="mb-3">
-                            <label class="form-label">IFSC Code</label>
-                            <input type="text" class="form-control" id="ifsc-code" required>
+                            <label class="form-label">Bank Details</label>
+                            <input type="text" class="form-control mb-2" id="bank-name" placeholder="Bank Name" required>
+                            <input type="text" class="form-control mb-2" id="account-number" placeholder="Account Number" required>
+                            <input type="text" class="form-control" id="ifsc-code" placeholder="IFSC Code" required>
                         </div>
                     </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" onclick="submitWithdrawal()">Submit</button>
+                    <button type="button" class="btn btn-primary" onclick="processWithdrawal()">Withdraw</button>
                 </div>
             </div>
         </div>
@@ -202,196 +178,6 @@
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <script src="../assets/js/config.js"></script>
     <script src="../assets/js/theme.js"></script>
-    <script>
-        // Check authentication
-        document.addEventListener('DOMContentLoaded', async function() {
-            const { data: { user }, error } = await supabaseClient.auth.getUser();
-            if (error || !user) {
-                window.location.href = '/';
-            }
-            loadWalletData();
-
-            // Show/hide emergency reason field
-            document.getElementById('withdraw-type').addEventListener('change', function() {
-                document.getElementById('emergency-reason-container').style.display = 
-                    this.value === 'emergency' ? 'block' : 'none';
-            });
-        });
-
-        // Load Wallet Data
-        async function loadWalletData() {
-            const { data: { user } } = await supabaseClient.auth.getUser();
-            
-            // Get wallet balance
-            const { data: wallet, error: walletError } = await supabaseClient
-                .from('wallets')
-                .select('balance')
-                .eq('user_id', user.id)
-                .single();
-
-            if (walletError) {
-                alert('Error loading wallet: ' + walletError.message);
-                return;
-            }
-
-            document.getElementById('wallet-balance').textContent = `₹${wallet.balance.toFixed(2)}`;
-
-            // Get transactions
-            const { data: transactions, error: transError } = await supabaseClient
-                .from('transactions')
-                .select('*')
-                .eq('user_id', user.id)
-                .order('created_at', { ascending: false });
-
-            if (transError) {
-                alert('Error loading transactions: ' + transError.message);
-                return;
-            }
-
-            updateTransactionTable(transactions);
-        }
-
-        // Update Transaction Table
-        function updateTransactionTable(transactions) {
-            const tableBody = document.getElementById('transactions-table');
-            tableBody.innerHTML = '';
-
-            transactions.forEach(trans => {
-                const row = document.createElement('tr');
-                row.innerHTML = `
-                    <td>${new Date(trans.created_at).toLocaleDateString()}</td>
-                    <td>
-                        <span class="badge bg-${trans.type === 'deposit' ? 'success' : 'primary'}">
-                            ${trans.type.charAt(0).toUpperCase() + trans.type.slice(1)}
-                        </span>
-                    </td>
-                    <td>₹${trans.amount.toFixed(2)}</td>
-                    <td>
-                        <span class="badge bg-${getStatusColor(trans.status)}">
-                            ${trans.status.charAt(0).toUpperCase() + trans.status.slice(1)}
-                        </span>
-                    </td>
-                    <td>${trans.reference || '-'}</td>
-                `;
-                tableBody.appendChild(row);
-            });
-        }
-
-        // Get status color
-        function getStatusColor(status) {
-            switch(status) {
-                case 'pending': return 'warning';
-                case 'completed': return 'success';
-                case 'rejected': return 'danger';
-                default: return 'secondary';
-            }
-        }
-
-        // Submit Deposit
-        async function submitDeposit() {
-            const amount = parseFloat(document.getElementById('deposit-amount').value);
-            const method = document.getElementById('deposit-method').value;
-            const reference = document.getElementById('deposit-reference').value;
-            const proofFile = document.getElementById('deposit-proof').files[0];
-
-            if (!amount || !method || !reference || !proofFile) {
-                alert('Please fill all required fields');
-                return;
-            }
-
-            const { data: { user } } = await supabaseClient.auth.getUser();
-
-            // Upload proof
-            const fileName = `${user.id}/deposit_${Date.now()}${proofFile.name.substring(proofFile.name.lastIndexOf('.'))}`;
-            const { data: uploadData, error: uploadError } = await supabaseClient.storage
-                .from('transaction_proofs')
-                .upload(fileName, proofFile);
-
-            if (uploadError) {
-                alert('Error uploading proof: ' + uploadError.message);
-                return;
-            }
-
-            const { publicURL } = supabaseClient.storage
-                .from('transaction_proofs')
-                .getPublicUrl(fileName);
-
-            // Create transaction
-            const { error: transError } = await supabaseClient
-                .from('transactions')
-                .insert([{
-                    user_id: user.id,
-                    type: 'deposit',
-                    amount,
-                    status: 'pending',
-                    payment_method: method,
-                    reference,
-                    proof_url: publicURL
-                }]);
-
-            if (transError) {
-                alert('Error creating transaction: ' + transError.message);
-                return;
-            }
-
-            // Close modal and reload data
-            const modal = bootstrap.Modal.getInstance(document.getElementById('depositModal'));
-            modal.hide();
-            loadWalletData();
-        }
-
-        // Submit Withdrawal
-        async function submitWithdrawal() {
-            const amount = parseFloat(document.getElementById('withdraw-amount').value);
-            const type = document.getElementById('withdraw-type').value;
-            const reason = document.getElementById('emergency-reason').value;
-            const bankName = document.getElementById('bank-name').value;
-            const accountNumber = document.getElementById('account-number').value;
-            const ifscCode = document.getElementById('ifsc-code').value;
-
-            if (!amount || !type || !bankName || !accountNumber || !ifscCode) {
-                alert('Please fill all required fields');
-                return;
-            }
-
-            if (type === 'emergency' && !reason) {
-                alert('Please provide emergency reason');
-                return;
-            }
-
-            const { data: { user } } = await supabaseClient.auth.getUser();
-
-            // Create transaction
-            const { error: transError } = await supabaseClient
-                .from('transactions')
-                .insert([{
-                    user_id: user.id,
-                    type: 'withdraw',
-                    amount,
-                    status: 'pending',
-                    withdrawal_type: type,
-                    emergency_reason: reason,
-                    bank_name: bankName,
-                    account_number: accountNumber,
-                    ifsc_code: ifscCode
-                }]);
-
-            if (transError) {
-                alert('Error creating transaction: ' + transError.message);
-                return;
-            }
-
-            // Close modal and reload data
-            const modal = bootstrap.Modal.getInstance(document.getElementById('withdrawModal'));
-            modal.hide();
-            loadWalletData();
-        }
-
-        // Logout function
-        async function logout() {
-            await supabaseClient.auth.signOut();
-            window.location.href = '/';
-        }
-    </script>
+    <script src="../assets/js/client-dashboard.js"></script>
 </body>
 </html> 
